name:           report-parser
version:        0.1.0.0
synopsis:       Linewise report parser combinator library
homepage:       
category:       Testing
author:         Gleb Gagarin
license:        BSD3
license-file:   LICENSE
cabal-version:  >= 1.10
build-type:     Simple

library
  other-modules:       Text.Parsing.Report
  other-modules:       Text.Parsing.Report.String
  build-depends:       base >=4.8,
                       bytestring,
                       attoparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable readelf-example
  main-is:             readelf.hs
  hs-source-dirs:      examples,src
  build-depends:       base >=4.8,
                       bytestring,
                       attoparsec
