name:           report-parser
version:        0.1.0.1
synopsis:       Parser combinator library for parsing log files and text reports.
homepage:       
category:       Testing
author:         Gleb Gagarin
license:        BSD3
license-file:   LICENSE
cabal-version:  >= 1.10
build-type:     Simple

library
  other-modules:       Text.Parsing.Report

  build-depends:       base >=4.8,
                       bytestring,
                       attoparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable readelf-example
  default-language:    Haskell2010
  main-is:             readelf.hs
  hs-source-dirs:      examples,src
  build-depends:       base >=4.8,
                       bytestring,
                       attoparsec
